Fri Jul  3 02:21:39 1998  Torben Weis  <weis@localhost>

	* kfmexec.cpp (slotMimeType): Fixed bug with OpenWithDlg
	  popuing up when opening remote documents that are not HTML
	  documents, but images for example.

	* kfm.cpp (Kfm): New Function 'slotShutDown'

	* kfmgui.cpp (slotQuit): Adaptions for shutdown stuff.

	* main.cpp (sig_term_handler): Adaptions for shutdown stuff.

	* kfmview.cpp (slotDropEvent): DnD Fix. Dropping icons from
	  kmail or ksysv do not crash kfm any more.

	* root.cpp (slotDropEvent): DnD Fix. Dropping icons from
	  kmail or ksysv do not crash kfm any more.

Sat Jun 27 18:11:23 1998 Carsten Pfeiffer <carpdjih@sp.zrz.tu-berlin.de>

	* kfmman.cpp (openPopupMenu): fixed multiple equal entries in 
	  popupmenu when several files of same mimetype are selected.

Fri Jun 26 17:20:03 1998    <weis@snoopy.rz.uni-frankfurt.de>

	* open-with.cpp (KAppTreeListItem): Fixed seg fault with
	  empty directory.

	* kfmgui.cpp (slotPannerChanged): Fixed bug with the panner.
	  If you resize the panner then the menu item will be set
	  accordingly. 

Sun Jun 21 00:08:32 1998  Torben Weis  <weis@localhost>

	* kioslave/icon.cpp (Open): Fixed little QString bug

	* kfmexec.cpp (slotMimeType): Made it work with the new goodie.

	* root.cpp (slotPopupOpenWith): Made it work with the new goodie.

	* kfmman.cpp (slotMimeType): Made it work with the new goodie.

	* kfmview.cpp (slotPopupOpenWith): Made it work with the new goodie.

	* kfmprops.cpp (BindingPropsPage): Made it work with the changes
	  in kbind.cpp/h

	* kbind.h (class KMimeBind): Changed internal data structures.
	  Some cleanups.

	* kfmdlg.cpp (OpenWithDlg): Added a little goodie :-)

	* bookmark.cpp (KBookmark): Removed debug output

	* main.cpp (main): sockets do now have the name
	  /tmp/kfm_uid_pid_display and /tmp/kio_uid_pid_display.
	  This solves problems with sockets names used by other
	  users. This should solve the problem that is sometimes
	  unable to connect/create is socket.
